--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,29 +1,31 @@
 footer{
-    background-color: #48484A;
+    background-color: var(--secondary-bg-color);
     width: 100vw;
     display: flex;
-    flex-direction: row;
-    margin-top: 7%;
-    justify-content: center;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
-
+    flex-direction: column;
+    position: relative;
+    bottom: 0px;
+    text-align: center;
+    border-bottom: 3px solid var(--accent-color);
 }
 footer>h1{
-    font-family: "Raleway", sans-serif;                                                
-    font-style: normal;
+    font-family: var(--seconday-font);                                                
+    font-weight: 400 !important;
     font-size: 1.5em;
-    color: white;
+    color: lightgray;
     margin: 0;
     padding-top: 10px;
 }
 footer>.iconfooter>.imgfooter{
-    padding-top: 7%;
-    padding-left: 30px;
     max-width:30px;
-    padding-bottom: 7%;
+    padding: 10px;
+    border-radius: 100%;
 }
 footer>.iconfooter>.imgfooter:hover{
     opacity:50%;
     transform: scale(1.1); 
     transition: all 0.5s ease-in;
+}
+.ContactPage>footer{
+    position: fixed;
 }
