--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 body {
 	height: 100vh;
 	margin: 0;
-	background-color: white;
+	background-color:var(--main-bg-color);
 	padding: 0;
 	-webkit-user-select: none;
 	-webkit-touch-callout: none;
@@ -9,4 +9,136 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 	overflow-x: hidden; 
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../../public/fonts_files/OpenSans-VariableFont_wdth\,wght.ttf') format('opentype');
+}
+
+:root{
+	--main-bg-color: #18191A;
+	--secondary-bg-color: rgba(255,255,255,0.05);
+	--skills-bg-color: rgba(255,255,255,0.11);
+	--main-body-bg-color: #ffffff;
+	--hover-bg-color:#3A3B3C;
+	--title-font: 'Open Sans', sans-serif;
+	--seconday-font:  'Open Sans', sans-serif;
+	--welcome-text-color: #ffffff;
+	--secondary-text-color: #B0B3B8;
+	--project-bg-color: #242526;
+	--accent-color: red;
+}
+.circles{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+	z-index:-1;
+}
+
+.circles>li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.5);
+    animation: animate 20s linear infinite;
+    bottom: -150px;
+    
+}
+
+.circles>li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+
+.circles>li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles>li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles>li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles>li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles>li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles>li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles>li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles>li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles>li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 20s;
+}
+
+
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
 }
