--- a/src/styles/mainbody.css
+++ b/src/styles/mainbody.css
@@ -9,27 +9,36 @@
     height: 30%;
     margin-left: 5%;
     margin-top: 3%;
-    border-radius: 3px;
-    background: #48484A;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+    border-radius: 5px;
+    background-color: var(--skills-bg-color);
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 30px;
 }
 .Parent>.images>p{
-    padding-left: 15px;
+    padding-left: 10%;
+}
+.Parent>.images>p>a>img{
+    margin: 5px;
+    padding: 5px;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 .Parent>.Mainbody{
-    background:  #FAF9F6;
-    border-radius: 3px;
+    background:  rgba(255, 255, 255, 0.95);
+    border-radius: 5px;
     width: 70%;
     margin-left: 3%;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+    margin-bottom: 3%;
 }
 .Parent>.Mainbody>.AboutMe{
     display: flex;
     align-items: center;
     width: 95%;
     height: 400px;
-    margin-top: -5%; 
-    margin-bottom: -5%;
+    margin-top: -4%; 
+    margin-bottom: -4%;
     padding-left: 2.5%;
 }
 
@@ -40,7 +49,8 @@
     display: none;
 }
 .Parent>.Mainbody>.AboutMe>.Text{
-    font-family: 'Circular Std', sans-serif; 
+    font-family: var(--title-font);      
+    font-style: normal;
     padding-left: 10px;
     margin-right: 5%;
     padding-right: 10px;
@@ -50,32 +60,28 @@
 }
 
 .Parent>.Mainbody>.AboutMe>.Text>h1{
-    font-family: "Raleway", sans-serif;                                                
-    font-style: normal;
-    font-weight: 500;
-    color: green ;
-}
-.Parent>.Mainbody>.AboutMe>.Text>h4{
-    font-weight: 300; 
-    font-size: 18px;
-    margin-top: 0;
+    font-family: var(--title-font);            
+    font-weight: 500 !important;
+    color: tomato;
+    font-size: 40px;
 }
 .Parent>.Mainbody>.AboutMe>.Text>.msg{
     text-align: justify;
-    font-weight: 100; 
-    font-size: 1em;
+    font-weight: 500 !important; 
+    font-size: 1em !important;
     margin-top: 0;
+    color: black;
 }
 .Parent>.Mainbody>.AboutMe>.Text>.msg>a{
-    color:black;
+    color: black;
 }
 .SectionSkill{
     text-align: start;
-    font-family: "Raleway", sans-serif;  
+    font-family: var(--title-font);   
     font-size: 1.5em;
-    font-weight: 600;
+    font-weight: 500;
     padding-left: 10px;
-    color: 	greenyellow ;
+    color: 	var(--welcome-text-color);
 }
 @media only screen and (max-width: 1300px) {
     .Parent>.Mainbody{
@@ -98,11 +104,27 @@
         width: 95%;
         margin-left: 2.5%;
         text-align: center;
+        position: static;
+    }
+    .Parent>.images>p>a>img{
+        margin: 30px;
+        scale: 1.3;
     }
     .Parent>.images>p>a{
-        padding-left: 20px;
+        padding: 0px;
     }
+    .Parent>.images>p{
+        padding-left: 0%;
+    }
+    
     .SectionSkill{
         text-align: center;
+        font-size: 24px;
+    }
+    .Parent>.Mainbody>.AboutMe>.Text>h1{
+        font-size: 30px !important;
+    }
+    .Parent>.Mainbody>.AboutMe>.Text>.msg{
+        font-size: 1.1em !important;
     }
   }
