--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -2,31 +2,31 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-family: 'Circular Std', sans-serif; 
-    color:  greenyellow;
-    background-color: #48484A ;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
-    margin-left: 2.5%;
-    margin-bottom: 30px;
+    font-family: var(--title-font);   
+    color:  var(--welcome-text-color);
+    background-color:  rgba(0, 0, 0, 0.8);
+    margin-left: 1%;
+    margin-top: 15px;
+    margin-bottom: 15px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 40px;
-    margin-right: 2.5%;
+    margin-right: 1%;
     border-radius: 5px;
 }
 .card>h1{
-    font-family: "Raleway", sans-serif;                                                
+    font-family:var(--title-font);                                                 
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     margin-bottom: -1%;
-}
-.card>p{   
-    font-size: 1em;
+    font-size: 28px;
     color: white;
 }
-.card>p2{   
-    font-size: 1em;
-    color: white;
+.card>.project_text{   
+    font-family: var(--seconday-font);
+    font-style: normal;
+    font-weight: 400 !important;
+    font-size: 1em !important;
+    padding-top: 15px;
 }
 .card>h1>.fa fa-external-link{
     max-width: 10px;
@@ -35,4 +35,88 @@
 .card>h1>i:hover{
     transform: scale(1.2); 
     transition: all 0.5s ease-in;
+}
+.card:hover{
+    background-color:#3A3B3C;
+    animation: pulse 2s infinite;
+}
+.card-Image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 3%;
+    width: auto;
+    height:500px;
+    border-radius: 5px;
+    background-color: #000000;
+    
+}
+.card>.card-Image>img{
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 400px;
+    max-width: 90%;
+}
+.monitorH1>i:hover{
+    transform: scale(1.2); 
+    transition: all 0.5s ease-in;
+}
+.card>.button{
+    font-family:var(--title-font);
+    font-size: 1em;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    margin-bottom: 15px;
+    border-radius: 3px;
+    height: 50px;
+    background-color: rgba(255,255,255,1);
+    border-width: 0;
+}
+.card>.button:hover{
+    background-color: lightcoral;
+    color: black;
+    transition: all 0.5s ease-in;
+}
+
+@keyframes typing {
+    from {
+      width: 0
+    }
+    to{
+      width:490px;
+    }
+}
+
+@keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+}
+
+@keyframes pulse {
+	0% {
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+@media only screen and (max-width: 1300px) {
+    .card-Image{
+        border-image-slice: 40 fill;
+    }
+    .card>.card-Image>img{
+        max-height: 350px;
+    }
+    .card>.project_text{   
+        font-size: 1.1em !important;
+    }
+    .card>.button{
+        font-size: 20px;
+    }
 }
