changes for public repo

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -29,3 +29,11 @@ footer>.iconfooter>.imgfooter:hover{
 .ContactPage>footer{
     position: fixed;
 }
+@media only screen and (max-width: 767px) and (min-width: 0px){
+    footer>h1{
+        font-size: 1em  !important;
+    }
+    footer>.iconfooter>.imgfooter{
+        max-width: 7vw;
+    }
+}
