--- a/src/styles/contact_body.css
+++ b/src/styles/contact_body.css
@@ -1,18 +1,19 @@
 .Contact_Body{
-    width: 40%;
+    max-width: 7in;
     height:auto;
-    margin-left: 30%;
+    margin: auto;
     background-color: white;
     font-family: var(--title-font);
     color: black;
     margin-top: 10vh;
     text-align: center;    
-    padding-top: 1%;
     border-radius: 5px;
+    opacity: 0.95
 }
 .Contact_Body>h1{
     text-decoration: underline tomato;
-    font-weight: 500;
+    font-weight: 400;
+    padding-top: 10px;
 }
 form{
     display: flex;
@@ -88,12 +89,26 @@ form>.Content{
     padding-left: 15px;
     padding-right: 15px;
 }
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1300px) and (min-width: 767px){
     .Contact_Body{
         width: 70%;
         margin-left: 16%;
         position: absolute;
         top: 15%;   
+    }
+}
+@media only screen and (max-width: 767px) and (min-width: 0px){
+    .Contact_Body{
+        width: 95%;
+        margin-left:2.5%;
+        position: absolute;
+        top: 3%; 
+    }
+    .Contact_Body>h1{
+        font-size: 1.5em;
+    }
+    .Contact_Body>form>.Message>.Submit_Button{
+        width: 30vw;
     }
 }
 
