--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -16,7 +16,7 @@
 .card>h1{
     font-family:var(--title-font);                                                 
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: -1%;
     font-size: 28px;
     color: white;
@@ -63,7 +63,7 @@
 }
 .card>.button{
     font-family:var(--title-font);
-    font-weight: 500;
+    font-weight: 450;
     font-size: 1em;
     margin-left: 0.5%;
     margin-right: 0.5%;
@@ -107,10 +107,7 @@
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
-@media only screen and (max-width: 1300px) {
-    .card-Image{
-        border-image-slice: 40 fill;
-    }
+@media only screen and (max-width: 1300px) and (min-width: 767px) {
     .card>.card-Image>img{
         max-height: 350px;
     }
@@ -119,5 +116,22 @@
     }
     .card>.button{
         font-size: 20px;
+    }
+}
+@media only screen and (max-width: 767px) and (min-width: 0px){
+    .card>.card-Image>img{
+        max-height: 300px;
+    }
+    .card>.card-Image{
+        height: 400px;
+    }
+    .card>h1{
+        font-size: 1.2em !important;
+    }
+    .card>.project_text{   
+        font-size: 1em !important;
+    }
+    .card>.button{
+        font-size: 1em !important;
     }
 }
