--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -1,48 +1,49 @@
 .StartPage{
+    margin: auto;
+    max-width: 17in;
     padding-left: 5%;
-    margin: 0;
-    position: relative;
+    padding-right: 5%;
 }
 .StartPage >.IntroText{
     pointer-events: none;
     font-family: var(--title-font);       
-    font-weight: 500 !important;
+    font-weight: 400 !important;
     font-size: 5em !important;
     color: var(--welcome-text-color);
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: .05em solid red;
-    animation: 
-        typing 3.0s forwards,
-        blink 1s step-end infinite;
     margin-bottom: -1%;
+    overflow: hidden; 
+    border-right: 0.07em solid red; 
+    white-space: nowrap;
+    animation: 
+      typing 1s forwards,
+      blink 1s infinite;
 }
 .StartPage >.IntroMsg{
     font-family: var(--seconday-font);
     text-align: justify;
     font-weight: 400 !important;
     font-size: 35px !important;
-    width: 92%;
+    width: 100%;
     color: var(--secondary-text-color);
     
 }
 .StartPage>.IntroMsg>a{        
-    font-weight: 500 !important;
+    font-weight: 400 !important;
     color: tomato;
 }
 .StartPage>.IntroMsg>a:hover{
     color: lightblue;
 }
 .StartPage>.IntroMsg>.SDE{
-    font-weight: 500 !important;
+    font-weight: 400 !important;
     color: tomato;
 }
 
 .StartPage>.Icons{
     display: flex;
     gap: 20px;
-    height:2.5vw;
-    width:2.5vw;
+    height: 50px;
+    width: 50px;
 }
 .StartPage>.Icons>.linkedinIcon:hover{
   opacity:50%;
@@ -55,8 +56,8 @@
   transition: all 0.5s ease-in;
 }
 .StartPage>.Icons>a>img{
-  height: 2.5vw;
-  width: 2.5vw;
+  height: 50px;
+  width: 50px;
 }
 .StartPage>.Icons>a>img:hover{
   opacity:50%;
@@ -65,7 +66,8 @@
 }
 .arrow {
   position: absolute;
-  right: 48%;
+  left: 50vw;
+  transform: translateX(-50%);
   display: none;
 
   opacity: 0;
@@ -82,8 +84,8 @@
   }
 }
 @keyframes typing {
-  0% { width: 0 }
-  100% { width: 100% }
+  from { width: 0 }
+  to { width: 100vw }
 }
 
 @keyframes blink {
@@ -93,7 +95,11 @@
 }
 
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1300px) and (min-width: 767px) {
+    .StartPage{
+      padding-left: 5%;
+      position: relative;
+    }
     .StartPage>.Icons{
       height:5vw;
       width:5vw;
@@ -103,10 +109,10 @@
       width: 5vw;
     }
     .StartPage{
-      height: 63vh;
+      height: 80vh;
     }
     .StartPage >.IntroText{
-      margin-top: 27vh;
+      margin-top: 20vh;
     }
     .arrow{
       display: block;
@@ -114,5 +120,44 @@
     }
     .StartPage >.IntroMsg{
       color: #e8e8e8;
+    }
+  }
+  @media only screen and (max-width: 767px) and (min-width: 0px){
+    .StartPage{
+      padding-left: 5vw;
+      position: relative;
+    }
+    .StartPage>.Icons{
+      height:10vw;
+      width:10vw;
+    }
+    .StartPage>.Icons>a>img{
+      height: 10vw;
+      width: 10vw;
+    }
+    .StartPage{
+      height: 80vh;
+    }
+    .StartPage >.IntroText{
+      margin-top: 20vh;
+      font-size: 2.5em !important;
+      border-right: 0.15em solid red;
+      animation: typing-mobile 1.5s linear,
+                blink 1s infinite;
+      width: fit-content;
+    }
+    .StartPage >.IntroMsg{
+      font-size: 1.2em !important;
+    }
+    .arrow{
+      display: block;
+      opacity: 1;
+    }
+    .StartPage >.IntroMsg{
+      color: #e8e8e8;
+    }    
+    @keyframes typing-mobile {
+      from { width: 0 }
+      to { width: 240px }
     }
   }
