pushing all the changes to public repo

--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -145,6 +145,7 @@
       animation: typing-mobile 1.5s linear,
                 blink 1s infinite;
       width: fit-content;
+      padding-right: 5px;
     }
     .StartPage >.IntroMsg{
       font-size: 1.2em !important;
