--- a/src/styles/contact_body.css
+++ b/src/styles/contact_body.css
@@ -102,7 +102,8 @@ form>.Content{
         width: 95%;
         margin-left:2.5%;
         position: absolute;
-        top: 3%; 
+        top: 0%; 
+        margin-top: 13%;
     }
     .Contact_Body>h1{
         font-size: 1.5em;
