--- a/src/styles/mainbody.css
+++ b/src/styles/mainbody.css
@@ -56,7 +56,6 @@
     width: fit-content;
     height: auto;
 }
-
 .Parent>.Mainbody>.AboutMe>.Text>h1{
     font-family: var(--title-font);            
     font-weight: 400 !important;
@@ -75,11 +74,10 @@
     color: black;
 }
 .SectionSkill{
-    text-align: start;
+    text-align: center;
     font-family: var(--title-font);   
     font-size: 1.5em !important;
     font-weight: 400;
-    padding-left: 10px;
     color: 	var(--welcome-text-color);
 }
 @media only screen and (max-width: 1480px) and (min-width: 1300px){
@@ -128,8 +126,12 @@
     }
     
     .SectionSkill{
-        text-align: center;
         font-size: 24px;
+        background-color: tomato;
+        width: 95%;
+        margin-left: 2.5%;
+        opacity: 0.90;
+        border-radius: 5px;
     }
     .Parent>.Mainbody>.AboutMe>.Text>h1{
         font-size: 30px !important;
@@ -181,7 +183,11 @@
         max-width: 0.5vw;
     }
     .SectionSkill{
-        text-align: center;
+        background-color: tomato;
+        width: 95%;
+        margin-left: 2.5%;
+        opacity: 0.90;
+        border-radius: 5px;
         font-size: 1em !important;
     }
     .Parent>.Mainbody>.AboutMe>.Text>h1{
