--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -11,21 +11,24 @@
     font-size: 5em !important;
     color: var(--welcome-text-color);
     margin-bottom: -1%;
-    overflow: hidden; 
-    border-right: 0.07em solid red; 
+    overflow: hidden;
     white-space: nowrap;
+    border-right: .05em solid red;
     animation: 
-      typing 1s forwards,
+      typing-desktop 2s forwards,
       blink 1s infinite;
+    margin-bottom: -1%;
 }
 .StartPage >.IntroMsg{
     font-family: var(--seconday-font);
     text-align: justify;
     font-weight: 400 !important;
     font-size: 35px !important;
-    width: 100%;
-    color: var(--secondary-text-color);
-    
+    width: calc(100%-20px);
+    color: black;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 5px;
+    padding: 10px;    
 }
 .StartPage>.IntroMsg>a{        
     font-weight: 400 !important;
@@ -83,9 +86,9 @@
     bottom: 140px;
   }
 }
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100vw }
+@keyframes typing-desktop {
+  0% { width: 0 }
+  100% { width: 370px }
 }
 
 @keyframes blink {
@@ -119,7 +122,7 @@
       opacity: 1;
     }
     .StartPage >.IntroMsg{
-      color: #e8e8e8;
+      background-color: rgba(255, 255, 255, 0.95);
     }
   }
   @media only screen and (max-width: 767px) and (min-width: 0px){
@@ -141,24 +144,23 @@
     .StartPage >.IntroText{
       margin-top: 20vh;
       font-size: 2.5em !important;
-      border-right: 0.10em solid red;
+      border-right: 0.09em solid red;
       animation: typing-mobile 1.5s linear,
                 blink 1s infinite;
       width: fit-content;
       padding-right: 5px;
     }
     .StartPage >.IntroMsg{
-      font-size: 1.2em !important;
+      text-align: left;
+      font-size: 1.4em !important;
+      background-color: rgba(255, 255, 255, 0.95);
     }
     .arrow{
       display: block;
       opacity: 1;
     }
-    .StartPage >.IntroMsg{
-      color: #e8e8e8;
-    }    
     @keyframes typing-mobile {
       from { width: 0 }
-      to { width: 240px }
+      to { width: 170px }
     }
   }
