--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -18,7 +18,7 @@
     font-style: normal;
     font-weight: 500;
     margin-bottom: -1%;
-    font-size: 28px;
+    font-size: 1.7em !important;
     color: white;
 }
 .card>.project_text{   
