--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -78,6 +78,28 @@
   animation: MoveUpDown 1s linear infinite;
   transition: opacity 0.5s ease-in-out;
 }
+.backtotop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  background-color:  rgba(255, 255, 255, 0.85);
+  text-align: center;
+  z-index: 10;
+  color: rgb(26, 26, 26);
+  border: var(--secondary-text-color);
+}
+
+.backtotop:hover{
+  opacity: 50%;
+  transform: scale(1.1); 
+  transition: all 0.5s ease-in;
+}
+
 @keyframes MoveUpDown {
   0%, 100% {
     bottom: 120px;
@@ -126,6 +148,11 @@
     }
   }
   @media only screen and (max-width: 767px) and (min-width: 0px){
+    .backtotop {
+      bottom: 10px;
+      right: 5px;
+      scale: 0.7;
+    }
     .StartPage{
       padding-left: 5vw;
       position: relative;
