--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -87,7 +87,7 @@
   height: 50px;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
-  background-color:  rgba(255, 255, 255, 0.85);
+  background-color:  white;
   text-align: center;
   z-index: 10;
   color: rgb(26, 26, 26);
@@ -98,6 +98,8 @@
   opacity: 50%;
   transform: scale(1.1); 
   transition: all 0.5s ease-in;
+  background-color: var(--hover-bg-color);
+  color: white;
 }
 
 @keyframes MoveUpDown {
