--- a/src/styles/contact_body.css
+++ b/src/styles/contact_body.css
@@ -8,7 +8,9 @@
     margin-top: 10vh;
     text-align: center;    
     border-radius: 5px;
-    opacity: 0.95
+    opacity: 0.95;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 }
 .Contact_Body>h1{
     text-decoration: underline tomato;
@@ -66,6 +68,8 @@ form>.Content{
     margin-right: 10%;
     color: white;
     font-size: 1em;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 }
 .Contact_Body>form>.Message>.Submit_Button:hover{
     background-color: tomato;
