--- a/src/styles/mainbody.css
+++ b/src/styles/mainbody.css
@@ -31,7 +31,7 @@
     padding: 5px;
     background: white;
     border-radius: 5px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .Parent>.Mainbody{
     background:  rgba(255, 255, 255, 0.95);
@@ -153,6 +153,7 @@
         margin-top: 5%;
         margin-left: 2.5%;
         margin-bottom: 5%;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;        
     }
     .Parent>.Mainbody>.AboutMe{
         text-align: center;
