--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -70,7 +70,7 @@
     height: 50px;
     background-color: rgba(255,255,255,1);
     border-width: 0;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .card>.button:hover{
     background-color: lightcoral;
