--- a/src/styles/startpage.css
+++ b/src/styles/startpage.css
@@ -29,6 +29,7 @@
     background-color: rgba(255, 255, 255, 0.85);
     border-radius: 5px;
     padding: 10px;    
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .StartPage>.IntroMsg>a{        
     font-weight: 400 !important;
@@ -92,6 +93,8 @@
   z-index: 10;
   color: rgb(26, 26, 26);
   border: var(--secondary-text-color);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 }
 
 .backtotop:hover{
