--- a/src/styles/readme_body.css
+++ b/src/styles/readme_body.css
@@ -12,6 +12,7 @@
     padding-top: 3%;
     padding-bottom: 3%;
     opacity: 0.95;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .markdown-body>p{
     font-family: var(--title-font);
