--- a/src/styles/contact_body.css
+++ b/src/styles/contact_body.css
@@ -68,6 +68,7 @@ form>.Content{
     margin-right: 10%;
     color: white;
     font-size: 1em;
+    cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
 }
@@ -98,7 +99,7 @@ form>.Content{
         width: 70%;
         margin-left: 16%;
         position: absolute;
-        top: 15%;   
+        top: 5%;   
     }
 }
 @media only screen and (max-width: 767px) and (min-width: 0px){
@@ -106,8 +107,7 @@ form>.Content{
         width: 95%;
         margin-left:2.5%;
         position: absolute;
-        top: 0%; 
-        margin-top: 13%;
+        margin-top: 4%;
     }
     .Contact_Body>h1{
         font-size: 1.5em;
