--- a/src/styles/mainbody.css
+++ b/src/styles/mainbody.css
@@ -4,31 +4,33 @@
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
     margin:auto;
-    max-width: 15.5in;
+    margin-bottom: 1%;
+    max-width: 14in;
     padding-right: 5%;
     padding-left: 5%;
+    background-color: rgba(112, 112, 112,0.05);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .Parent>.images{
     width: 17%;
     height: 30%;
     margin-top: 3%;
     border-radius: 5px;
-    background-color: var(--skills-bg-color);
     position: -webkit-sticky; /* Safari */
     position: sticky;
     padding-bottom: 20px;
     top: 30px;
-    background: -webkit-linear-gradient(to right, #232526, #414345);
-    background: linear-gradient(to right, #232526, #414345);
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    background: var(--skills-bg-color);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .Parent>.images>p{
     margin: auto;
-    max-width: 225px;
+    max-width: 208px;
 }
 .Parent>.images>p>a>img{
     margin: 5px;
-    padding: 5px;
+    padding: 3px;
     background: white;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
@@ -63,7 +65,7 @@
     font-family: var(--title-font);            
     font-weight: 400 !important;
     color: tomato;
-    font-size: 2em !important;
+    font-size: 1.7em !important;
     margin-bottom: 1%;
 }
 .Parent>.Mainbody>.AboutMe>.Text>.msg{
@@ -93,6 +95,7 @@
     .Parent{
         padding-right: 0%;
         padding-left: 0%;
+        margin-bottom: 0%;
     }
     .Parent>.Mainbody{
         width: 95%;
@@ -117,8 +120,8 @@
         position: static;
     }
     .Parent>.images>p>a>img{
-        margin: 30px;
-        scale: 1.3;
+        margin: 15px;
+        scale: 1.2;
     }
     .Parent>.images>p>a{
         padding: 0px;
@@ -149,6 +152,7 @@
     .Parent{
         padding-right: 0%;
         padding-left: 0%;
+        margin-bottom: 0%;
     }
     .Parent>.Mainbody{
         width: 95%;
