--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -44,11 +44,11 @@ nav>ul>li:hover{
 }
 .navbar>ul>.deployed_nav:hover{
     transition: background-color 0.5s ease-in-out;
-    background-color:red;
+    background-color:var(--contact-button);
 }
 .navbar>ul>.project_nav:hover{
     transition: background-color 0.5s ease-in-out;
-    background-color:red;
+    background-color:var(--contact-button);
 }
 .navbar>ul>.project_nav>a{
     color: black;
@@ -60,14 +60,14 @@ nav>ul>li:hover{
     font-family:var(--title-font);
     display: block;
     text-align: center;
-    font-weight: 400 !important;
-    font-size: 1.1em;
+    font-weight: 500 !important;
+    font-size: 1em;
     padding: 8px;
     text-decoration: none;
     color: black;
 }
 .navbar>ul>li>a:hover{
-    transition: background-color 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     color: white;
 }
 .navbar>.Logo{
@@ -81,7 +81,7 @@ nav>ul>li:hover{
     display: none;
 }
 .navbar>ul>.contact_button{
-    background-color:rgb(253, 62, 62);
+    background-color:var(--contact-button);
 }
 .navbar>ul>.contact_button>a{
     color: white;
@@ -96,11 +96,13 @@ nav>ul>li:hover{
         padding-right: 10px;
     }
     .navbar>ul>li{
-        width: 20vw;
+        width: auto;
         font-size: 0.6em;
     }
     .navbar>ul>li>a{    
-        padding: 1vw 2vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .navbar>ul>.deployed_nav>a{
         color: black;
