--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -11,8 +11,7 @@
     padding-right: 10px;
     margin-right: 1%;
     border-radius: 5px;
-    background: -webkit-linear-gradient(to right, #232526, #414345);
-    background: linear-gradient(to right, #232526, #414345);
+    background: var(--project-bg-color);
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;    
 }
 .card>h1{
@@ -20,7 +19,7 @@
     font-style: normal;
     font-weight: 500;
     margin-bottom: -1%;
-    font-size: 1.7em !important;
+    font-size: 1.5em !important;
     color: white;
 }
 .card>.project_text{   
@@ -35,7 +34,6 @@
     transition: all 0.5s ease-in;
 }
 .card:hover{
-    background-color:#3A3B3C;
     animation: pulse 2s infinite;
 }
 .card-Image{
@@ -70,6 +68,7 @@
     height: 50px;
     background-color: rgba(255,255,255,1);
     border-width: 0;
+    cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .card>.button:hover{
@@ -110,9 +109,6 @@
     .card>.card-Image>img{
         max-height: 350px;
     }
-    .card>.project_text{   
-        font-size: 1.1em !important;
-    }
     .card>.button{
         font-size: 20px;
     }
@@ -120,9 +116,11 @@
 @media only screen and (max-width: 767px) and (min-width: 0px){
     .card>.card-Image>img{
         max-height: 300px;
+        padding-top: 50px;
+        padding-bottom: 50px;
     }
     .card>.card-Image{
-        height: 400px;
+        height: auto;
     }
     .card>h1{
         font-size: 1.2em !important;
