--- a/src/styles/project_card_only.css
+++ b/src/styles/project_card_only.css
@@ -2,21 +2,27 @@
     display: flex;
     flex-direction: column;
     margin:auto;
-    max-width: 16in;
-    margin-top: 3%;
-    margin-bottom: 7%;
+    max-width: 14in;
+    margin-top: 1%;
+    padding-top: 2%;
+    margin-bottom: 1%;
+    padding-bottom: 7%;
+    background-color: rgba(112, 112, 112,0.05);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .Parentbody>.images{
     width: 70%;
     margin-left: 16%;
     text-align: center;
-    background: -webkit-linear-gradient(to right, #232526, #414345);
-    background: linear-gradient(to right, #232526, #414345);
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    background: var(--skills-bg-color);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     border-radius: 5px;
 }
 .Parentbody>.images>p>a{
-    padding: 10px;
+    padding: 5px;
 }
 .ParentBody>.images>p>a>img{
     padding: 5px;
@@ -40,14 +46,17 @@
     color: 	var(--welcome-text-color);    
 }
 @media only screen and (max-width: 1300px) and (min-width: 767px){
+    .ParentBody{
+        background-color: transparent;
+    }
     .Parentbody>.images{
         margin-left: 2.5%;
         width: 95%;
     }   
     
     .Parentbody>.images>p>a>img{
-        margin: 30px;
-        scale: 1.3;
+        margin: 15px;
+        scale: 1.2;
     }
     .Parentbody>.images>p>a{
         padding: 0px;
@@ -65,6 +74,10 @@
     }
   }
 @media only screen and (max-width: 767px) and (min-width: 0px){
+        .ParentBody{
+            background-color: transparent;
+            margin-bottom: 0%;
+        }
         .Parentbody>.images{
             margin-left: 2.5%;
             width: 95%;
@@ -74,6 +87,7 @@
             max-width: 6vw;
             max-height: 6vw;
             margin: 5px;
+            padding: 3px;
         }
         .Parentbody>.images>p>a{
             padding: 0px;
